Fix spacing between text

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ html {
 h1 {
   font-family: Bevan, sans-serif;
   color: #fff;
-  margin: .3em;
+  margin: .3em 0 -.5em;
 }
 
 body {
